# hiBus

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  builtin-endpoint.c  builtin_endpoint.c  cmdline.c  cmdline.h  drum_game.c  endpoint.c  endpoint.h  helpers.c  hibus.h  libhibus.c  pattern_list.c  server.c  server.h  sign_verify_dummy.c  sign_verify_hmac_sha256.c  sign_verify_rsa_sha256.c  unixsocket.c  unixsocket.h  websocket.c  websocket.h
tools/: mk_app_keys.sh
